--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,399 @@
 {
-    "python.analysis.typeCheckingMode": "off",
-    "python.analysis.autoImportCompletions": true
+    // "workbench.colorTheme": "Firefox Dark",
+    // "editor.fontFamily": "Source Code Pro",
+    // "workbench.colorCustomizations": {
+    //     // 45d4ff
+    //     "editor.foreground": "#45d4ff",
+    //     "editor.background": "#1E1E1E"
+    // },
+    // "editor.tokenColorCustomizations": {
+    //     "textMateRules": [
+    //         {
+    //             // no italic
+    //             "scope": [
+    //                 "comment",
+    //                 "comment.block",
+    //                 "comment.block.documentation",
+    //                 "comment.line",
+    //                 "constant",
+    //                 "constant.character",
+    //                 "constant.character.escape",
+    //                 "constant.numeric",
+    //                 "constant.numeric.integer",
+    //                 "constant.numeric.float",
+    //                 "constant.numeric.hex",
+    //                 "constant.numeric.octal",
+    //                 "constant.other",
+    //                 "constant.regexp",
+    //                 "constant.rgb-value",
+    //                 "emphasis",
+    //                 "entity",
+    //                 "entity.name",
+    //                 "entity.name.class",
+    //                 "entity.name.function",
+    //                 "entity.name.method",
+    //                 "entity.name.section",
+    //                 "entity.name.selector",
+    //                 "entity.name.tag",
+    //                 "entity.name.type",
+    //                 "entity.other",
+    //                 "entity.other.attribute-name",
+    //                 "entity.other.inherited-class",
+    //                 "invalid",
+    //                 "invalid.deprecated",
+    //                 "invalid.illegal",
+    //                 "keyword",
+    //                 "keyword.control",
+    //                 "keyword.operator",
+    //                 "keyword.operator.new",
+    //                 "keyword.operator.assignment",
+    //                 "keyword.operator.arithmetic",
+    //                 "keyword.operator.logical",
+    //                 "keyword.other",
+    //                 "markup",
+    //                 "markup.bold",
+    //                 "markup.changed",
+    //                 "markup.deleted",
+    //                 "markup.heading",
+    //                 "markup.inline.raw",
+    //                 "markup.inserted",
+    //                 "markup.italic",
+    //                 "markup.list",
+    //                 "markup.list.numbered",
+    //                 "markup.list.unnumbered",
+    //                 "markup.other",
+    //                 "markup.quote",
+    //                 "markup.raw",
+    //                 "markup.underline",
+    //                 "markup.underline.link",
+    //                 "meta",
+    //                 "meta.block",
+    //                 "meta.cast",
+    //                 "meta.class",
+    //                 "meta.function",
+    //                 "meta.function-call",
+    //                 "meta.preprocessor",
+    //                 "meta.return-type",
+    //                 "meta.selector",
+    //                 "meta.tag",
+    //                 "meta.type.annotation",
+    //                 "meta.type",
+    //                 "punctuation.definition.string.begin",
+    //                 "punctuation.definition.string.end",
+    //                 "punctuation.separator",
+    //                 "punctuation.separator.continuation",
+    //                 "punctuation.terminator",
+    //                 "storage",
+    //                 "storage.modifier",
+    //                 "storage.type",
+    //                 "string",
+    //                 "string.interpolated",
+    //                 "string.other",
+    //                 "string.quoted",
+    //                 "string.quoted.double",
+    //                 "string.quoted.other",
+    //                 "string.quoted.single",
+    //                 "string.quoted.triple",
+    //                 "string.regexp",
+    //                 "string.unquoted",
+    //                 "strong",
+    //                 "support",
+    //                 "support.class",
+    //                 "support.constant",
+    //                 "support.function",
+    //                 "support.other",
+    //                 "support.type",
+    //                 "support.type.property-name",
+    //                 "support.variable",
+    //                 "variable",
+    //                 "variable.language",
+    //                 "variable.name",
+    //                 "variable.other",
+    //                 "variable.other.readwrite",
+    //                 "variable.parameter",
+    //                 "variable.parameter.function.language.special.self.python",
+    //                 "variable.parameter.function.language.python",
+    //                 "meta.function.parameters.python",
+    //                 "meta.function.python",
+    //                 "source.python"
+    //         ],
+    //             "settings": {
+    //                 "fontStyle": ""
+    //             }
+    //         },
+    //         {
+    //             "scope": [
+    //                 "string"
+    //             ],
+    //             "settings": {
+    //                 "foreground": "#d7bb97"
+    //             }
+    //         },
+    //         {
+    //             "scope": [
+    //                 "comment",
+    //                 "comment.block",
+    //                 "comment.block.documentation",
+    //                 "comment.line",
+    //                 "comment.block.html",
+    //                 "meta.tag.metadata.doctype.html",
+	// 			    "meta.tag.sgml.doctype.html",
+    //                 "punctuation.definition.comment"
+    //             ],
+    //             "settings": {
+    //                 "foreground": "#6B89FF"
+    //             }
+    //         },
+            
+    //     ]
+    // },
+
+    "workbench.colorCustomizations": {
+        // e6e6e6 || f8f6f1
+        "editor.background": "#e6e6e6",
+        "editor.foreground": "#0000FF"
+    },
+    "workbench.colorTheme": "Default Light+",
+    
+    "editor.fontWeight": "bold",
+    "editor.fontFamily": "DejaVu Sans Mono",
+    "editor.fontSize": 14,
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                // no italic
+                "scope": [
+                    "comment",
+                    "comment.block",
+                    "comment.block.documentation",
+                    "comment.line",
+                    "constant",
+                    "constant.character",
+                    "constant.character.escape",
+                    "constant.numeric",
+                    "constant.numeric.integer",
+                    "constant.numeric.float",
+                    "constant.numeric.hex",
+                    "constant.numeric.octal",
+                    "constant.other",
+                    "constant.regexp",
+                    "constant.rgb-value",
+                    "emphasis",
+                    "entity",
+                    "entity.name",
+                    "entity.name.class",
+                    "entity.name.function",
+                    "entity.name.method",
+                    "entity.name.section",
+                    "entity.name.selector",
+                    "entity.name.tag",
+                    "entity.name.type",
+                    "entity.other",
+                    "entity.other.attribute-name",
+                    "entity.other.inherited-class",
+                    "invalid",
+                    "invalid.deprecated",
+                    "invalid.illegal",
+                    "keyword",
+                    "keyword.control",
+                    "keyword.operator",
+                    "keyword.operator.new",
+                    "keyword.operator.assignment",
+                    "keyword.operator.arithmetic",
+                    "keyword.operator.logical",
+                    "keyword.other",
+                    "markup",
+                    "markup.bold",
+                    "markup.changed",
+                    "markup.deleted",
+                    "markup.heading",
+                    "markup.inline.raw",
+                    "markup.inserted",
+                    "markup.italic",
+                    "markup.list",
+                    "markup.list.numbered",
+                    "markup.list.unnumbered",
+                    "markup.other",
+                    "markup.quote",
+                    "markup.raw",
+                    "markup.underline",
+                    "markup.underline.link",
+                    "meta",
+                    "meta.block",
+                    "meta.cast",
+                    "meta.class",
+                    "meta.function",
+                    "meta.function-call",
+                    "meta.preprocessor",
+                    "meta.return-type",
+                    "meta.selector",
+                    "meta.tag",
+                    "meta.type.annotation",
+                    "meta.type",
+                    "punctuation.definition.string.begin",
+                    "punctuation.definition.string.end",
+                    "punctuation.separator",
+                    "punctuation.separator.continuation",
+                    "punctuation.terminator",
+                    "storage",
+                    "storage.modifier",
+                    "storage.type",
+                    "string",
+                    "string.interpolated",
+                    "string.other",
+                    "string.quoted",
+                    "string.quoted.double",
+                    "string.quoted.other",
+                    "string.quoted.single",
+                    "string.quoted.triple",
+                    "string.regexp",
+                    "string.unquoted",
+                    "strong",
+                    "support",
+                    "support.class",
+                    "support.constant",
+                    "support.function",
+                    "support.other",
+                    "support.type",
+                    "support.type.property-name",
+                    "support.variable",
+                    "variable",
+                    "variable.language",
+                    "variable.name",
+                    "variable.other",
+                    "variable.other.readwrite",
+                    "variable.parameter",
+                    "variable.parameter.function.language.special.self.python",
+                    "variable.parameter.function.language.python",
+                    "meta.function.parameters.python",
+                    "meta.function.python",
+                    "source.python"
+            ],
+                "settings": {
+                    "fontStyle": ""
+                }
+            },
+            {
+                "scope": [
+                    "source.powershell variable.other.member",
+                    "entity.name.operator.custom-literal",
+                    "string",
+                    "punctuation.definition.group.regexp",
+                    "punctuation.definition.group.assertion.regexp",
+                    "punctuation.definition.character-class.regexp",
+                    "punctuation.character.set.begin.regexp",
+                    "punctuation.character.set.end.regexp",
+                    "keyword.operator.negation.regexp",
+                    "support.other.parenthesis.regexp",
+                    "meta.preprocessor.string",
+        		    "meta.embedded.assembly"
+                ],
+                "settings": {
+                    "foreground": "#6c2fb6"
+                }
+            },
+            {
+                "scope": [
+                    "comment"
+                ],
+                "settings": {
+                    "foreground": "#147592"
+                }
+            },
+            {
+                "scope": [
+                    "support.class",
+                    "support.type",
+                    "entity.name.type",
+                    "entity.name.namespace",
+                    "entity.other.attribute",
+                    "entity.name.scope-resolution",
+                    "entity.name.class",
+                    "entity.name.function",
+                    "support.function",
+                    "support.constant.handlebars",
+                    "entity.other.attribute-name"
+                ],
+                "settings": {
+                    "foreground": "#720000"
+                }
+            }
+        ]
+    },
+
+    "terminal.integrated.fontFamily": "Consolas",
+    "terminal.integrated.fontSize": 16,
+    "editor.lineHeight": 1.8,
+    "editor.letterSpacing": 0.5,
+    "terminal.integrated.lineHeight": 1.5,
+    "terminal.integrated.fontWeight": "bold",
+    "terminal.integrated.letterSpacing": 1,
+    "debug.console.fontSize": 13,
+    "debug.console.fontFamily": "Fira Code",
+    "debug.console.lineHeight": 24,
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.cursorBlinking": "solid",
+    "editor.cursorStyle": "block",
+    "editor.renderLineHighlight": "gutter",
+    "security.workspace.trust.untrustedFiles": "open",    
+    "terminal.integrated.sendKeybindingsToShell": true,
+    "terminal.integrated.tabStopWidth": 4,
+    "git.ignoreMissingGitWarning": true,
+    "explorer.confirmDelete": false,
+    "editor.autoClosingDelete": "never",
+    "git.openRepositoryInParentFolders": "never",
+    "editor.wordWrap": "on",
+    "editor.tabCompletion": "on",
+    "emmet.triggerExpansionOnTab": true,
+    "terminal.integrated.defaultProfile.windows": "Command Prompt",
+    "extensions.ignoreRecommendations": true,
+    "git.enableSmartCommit": true,
+    "editor.autoClosingBrackets": "never",
+    "editor.autoClosingQuotes": "never",
+    "terminal.integrated.drawBoldTextInBrightColors": true,
+    "terminal.integrated.tabFocusMode": false,
+    "editor.accessibilitySupport": "off",
+    "editor.scrollbar.verticalScrollbarSize": 40,
+    "workbench.editor.enablePreview": false,
+    "breadcrumbs.enabled": false,
+    "editor.smoothScrolling": true,
+    "terminal.integrated.smoothScrolling": true,
+    "testing.gutterEnabled": false,
+    "editor.lineDecorationsWidth": 0,
+    "editor.glyphMargin": true,
+    "git.decorations.enabled": false,
+    "editor.folding": true,
+    "editor.showUnused": false,
+    "terminal.integrated.defaultProfile.linux": "bash",
+    "outline.collapseItems": "alwaysCollapse",
+    "editor.minimap.enabled": false,
+    "git.confirmSync": false,
+    "workbench.activityBar.location": "top",
+    "git.autofetch": true,
+    "security.allowedUNCHosts": [
+        "wsl$"
+    ],
+    "explorer.fileNesting.patterns": {
+        "*.ts": "${capture}.js",
+        "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+        "*.jsx": "${capture}.js",
+        "*.tsx": "${capture}.ts",
+        "tsconfig.json": "tsconfig.*.json",
+        "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
+        "*.sqlite": "${capture}.${extname}-*",
+        "*.db": "${capture}.${extname}-*",
+        "*.sqlite3": "${capture}.${extname}-*",
+        "*.db3": "${capture}.${extname}-*",
+        "*.sdb": "${capture}.${extname}-*",
+        "*.s3db": "${capture}.${extname}-*"
+    },
+    "[python]": {        
+        "diffEditor.ignoreTrimWhitespace": false,
+        "editor.formatOnType": true,
+        "editor.wordBasedSuggestions": "off"
+    },
+    "window.confirmSaveUntitledWorkspace": false,
+    "window.zoomLevel": 1,
+    "workbench.editor.editorActionsLocation": "titleBar",
+    
 }
