--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,163 +1,11 @@
 {
-    // "workbench.colorTheme": "Firefox Dark",
-    // "editor.fontFamily": "Source Code Pro",
-    // "workbench.colorCustomizations": {
-    //     // 45d4ff
-    //     "editor.foreground": "#45d4ff",
-    //     "editor.background": "#1E1E1E"
-    // },
-    // "editor.tokenColorCustomizations": {
-    //     "textMateRules": [
-    //         {
-    //             // no italic
-    //             "scope": [
-    //                 "comment",
-    //                 "comment.block",
-    //                 "comment.block.documentation",
-    //                 "comment.line",
-    //                 "constant",
-    //                 "constant.character",
-    //                 "constant.character.escape",
-    //                 "constant.numeric",
-    //                 "constant.numeric.integer",
-    //                 "constant.numeric.float",
-    //                 "constant.numeric.hex",
-    //                 "constant.numeric.octal",
-    //                 "constant.other",
-    //                 "constant.regexp",
-    //                 "constant.rgb-value",
-    //                 "emphasis",
-    //                 "entity",
-    //                 "entity.name",
-    //                 "entity.name.class",
-    //                 "entity.name.function",
-    //                 "entity.name.method",
-    //                 "entity.name.section",
-    //                 "entity.name.selector",
-    //                 "entity.name.tag",
-    //                 "entity.name.type",
-    //                 "entity.other",
-    //                 "entity.other.attribute-name",
-    //                 "entity.other.inherited-class",
-    //                 "invalid",
-    //                 "invalid.deprecated",
-    //                 "invalid.illegal",
-    //                 "keyword",
-    //                 "keyword.control",
-    //                 "keyword.operator",
-    //                 "keyword.operator.new",
-    //                 "keyword.operator.assignment",
-    //                 "keyword.operator.arithmetic",
-    //                 "keyword.operator.logical",
-    //                 "keyword.other",
-    //                 "markup",
-    //                 "markup.bold",
-    //                 "markup.changed",
-    //                 "markup.deleted",
-    //                 "markup.heading",
-    //                 "markup.inline.raw",
-    //                 "markup.inserted",
-    //                 "markup.italic",
-    //                 "markup.list",
-    //                 "markup.list.numbered",
-    //                 "markup.list.unnumbered",
-    //                 "markup.other",
-    //                 "markup.quote",
-    //                 "markup.raw",
-    //                 "markup.underline",
-    //                 "markup.underline.link",
-    //                 "meta",
-    //                 "meta.block",
-    //                 "meta.cast",
-    //                 "meta.class",
-    //                 "meta.function",
-    //                 "meta.function-call",
-    //                 "meta.preprocessor",
-    //                 "meta.return-type",
-    //                 "meta.selector",
-    //                 "meta.tag",
-    //                 "meta.type.annotation",
-    //                 "meta.type",
-    //                 "punctuation.definition.string.begin",
-    //                 "punctuation.definition.string.end",
-    //                 "punctuation.separator",
-    //                 "punctuation.separator.continuation",
-    //                 "punctuation.terminator",
-    //                 "storage",
-    //                 "storage.modifier",
-    //                 "storage.type",
-    //                 "string",
-    //                 "string.interpolated",
-    //                 "string.other",
-    //                 "string.quoted",
-    //                 "string.quoted.double",
-    //                 "string.quoted.other",
-    //                 "string.quoted.single",
-    //                 "string.quoted.triple",
-    //                 "string.regexp",
-    //                 "string.unquoted",
-    //                 "strong",
-    //                 "support",
-    //                 "support.class",
-    //                 "support.constant",
-    //                 "support.function",
-    //                 "support.other",
-    //                 "support.type",
-    //                 "support.type.property-name",
-    //                 "support.variable",
-    //                 "variable",
-    //                 "variable.language",
-    //                 "variable.name",
-    //                 "variable.other",
-    //                 "variable.other.readwrite",
-    //                 "variable.parameter",
-    //                 "variable.parameter.function.language.special.self.python",
-    //                 "variable.parameter.function.language.python",
-    //                 "meta.function.parameters.python",
-    //                 "meta.function.python",
-    //                 "source.python"
-    //         ],
-    //             "settings": {
-    //                 "fontStyle": ""
-    //             }
-    //         },
-    //         {
-    //             "scope": [
-    //                 "string"
-    //             ],
-    //             "settings": {
-    //                 "foreground": "#d7bb97"
-    //             }
-    //         },
-    //         {
-    //             "scope": [
-    //                 "comment",
-    //                 "comment.block",
-    //                 "comment.block.documentation",
-    //                 "comment.line",
-    //                 "comment.block.html",
-    //                 "meta.tag.metadata.doctype.html",
-	// 			    "meta.tag.sgml.doctype.html",
-    //                 "punctuation.definition.comment"
-    //             ],
-    //             "settings": {
-    //                 "foreground": "#6B89FF"
-    //             }
-    //         },
-            
-    //     ]
-    // },
-
+    "workbench.colorTheme": "Firefox Dark",
+    "editor.fontSize": 13,
     "workbench.colorCustomizations": {
-        // e6e6e6 || f8f6f1
-        "editor.background": "#e6e6e6",
-        "editor.foreground": "#0000FF"
+        // 45d4ff
+        "editor.foreground": "#45d4ff",
+        "editor.background": "#1E1E1E"
     },
-    "workbench.colorTheme": "Default Light+",
-    
-    "editor.fontWeight": "bold",
-    "editor.fontFamily": "DejaVu Sans Mono",
-    "editor.fontSize": 14,
     "editor.tokenColorCustomizations": {
         "textMateRules": [
             {
@@ -275,51 +123,201 @@
             },
             {
                 "scope": [
-                    "source.powershell variable.other.member",
-                    "entity.name.operator.custom-literal",
-                    "string",
-                    "punctuation.definition.group.regexp",
-                    "punctuation.definition.group.assertion.regexp",
-                    "punctuation.definition.character-class.regexp",
-                    "punctuation.character.set.begin.regexp",
-                    "punctuation.character.set.end.regexp",
-                    "keyword.operator.negation.regexp",
-                    "support.other.parenthesis.regexp",
-                    "meta.preprocessor.string",
-        		    "meta.embedded.assembly"
+                    "string"
                 ],
                 "settings": {
-                    "foreground": "#6c2fb6"
+                    "foreground": "#d7bb97"
                 }
             },
             {
                 "scope": [
-                    "comment"
+                    "comment",
+                    "comment.block",
+                    "comment.block.documentation",
+                    "comment.line",
+                    "comment.block.html",
+                    "meta.tag.metadata.doctype.html",
+				    "meta.tag.sgml.doctype.html",
+                    "punctuation.definition.comment"
                 ],
                 "settings": {
-                    "foreground": "#147592"
+                    "foreground": "#6B89FF"
                 }
             },
-            {
-                "scope": [
-                    "support.class",
-                    "support.type",
-                    "entity.name.type",
-                    "entity.name.namespace",
-                    "entity.other.attribute",
-                    "entity.name.scope-resolution",
-                    "entity.name.class",
-                    "entity.name.function",
-                    "support.function",
-                    "support.constant.handlebars",
-                    "entity.other.attribute-name"
-                ],
-                "settings": {
-                    "foreground": "#720000"
-                }
-            }
+            
         ]
     },
+
+    // "workbench.colorCustomizations": {
+    //     // e6e6e6 || f8f6f1
+    //     "editor.background": "#e6e6e6",
+    //     "editor.foreground": "#0000FF"
+    // },
+    // // "workbench.colorTheme": "Default Light+",
+    // "editor.fontFamily": "DejaVu Sans Mono",
+    // "editor.fontSize": 14,
+    // "editor.tokenColorCustomizations": {
+    //     "textMateRules": [
+    //         {
+    //             // no italic
+    //             "scope": [
+    //                 "comment",
+    //                 "comment.block",
+    //                 "comment.block.documentation",
+    //                 "comment.line",
+    //                 "constant",
+    //                 "constant.character",
+    //                 "constant.character.escape",
+    //                 "constant.numeric",
+    //                 "constant.numeric.integer",
+    //                 "constant.numeric.float",
+    //                 "constant.numeric.hex",
+    //                 "constant.numeric.octal",
+    //                 "constant.other",
+    //                 "constant.regexp",
+    //                 "constant.rgb-value",
+    //                 "emphasis",
+    //                 "entity",
+    //                 "entity.name",
+    //                 "entity.name.class",
+    //                 "entity.name.function",
+    //                 "entity.name.method",
+    //                 "entity.name.section",
+    //                 "entity.name.selector",
+    //                 "entity.name.tag",
+    //                 "entity.name.type",
+    //                 "entity.other",
+    //                 "entity.other.attribute-name",
+    //                 "entity.other.inherited-class",
+    //                 "invalid",
+    //                 "invalid.deprecated",
+    //                 "invalid.illegal",
+    //                 "keyword",
+    //                 "keyword.control",
+    //                 "keyword.operator",
+    //                 "keyword.operator.new",
+    //                 "keyword.operator.assignment",
+    //                 "keyword.operator.arithmetic",
+    //                 "keyword.operator.logical",
+    //                 "keyword.other",
+    //                 "markup",
+    //                 "markup.bold",
+    //                 "markup.changed",
+    //                 "markup.deleted",
+    //                 "markup.heading",
+    //                 "markup.inline.raw",
+    //                 "markup.inserted",
+    //                 "markup.italic",
+    //                 "markup.list",
+    //                 "markup.list.numbered",
+    //                 "markup.list.unnumbered",
+    //                 "markup.other",
+    //                 "markup.quote",
+    //                 "markup.raw",
+    //                 "markup.underline",
+    //                 "markup.underline.link",
+    //                 "meta",
+    //                 "meta.block",
+    //                 "meta.cast",
+    //                 "meta.class",
+    //                 "meta.function",
+    //                 "meta.function-call",
+    //                 "meta.preprocessor",
+    //                 "meta.return-type",
+    //                 "meta.selector",
+    //                 "meta.tag",
+    //                 "meta.type.annotation",
+    //                 "meta.type",
+    //                 "punctuation.definition.string.begin",
+    //                 "punctuation.definition.string.end",
+    //                 "punctuation.separator",
+    //                 "punctuation.separator.continuation",
+    //                 "punctuation.terminator",
+    //                 "storage",
+    //                 "storage.modifier",
+    //                 "storage.type",
+    //                 "string",
+    //                 "string.interpolated",
+    //                 "string.other",
+    //                 "string.quoted",
+    //                 "string.quoted.double",
+    //                 "string.quoted.other",
+    //                 "string.quoted.single",
+    //                 "string.quoted.triple",
+    //                 "string.regexp",
+    //                 "string.unquoted",
+    //                 "strong",
+    //                 "support",
+    //                 "support.class",
+    //                 "support.constant",
+    //                 "support.function",
+    //                 "support.other",
+    //                 "support.type",
+    //                 "support.type.property-name",
+    //                 "support.variable",
+    //                 "variable",
+    //                 "variable.language",
+    //                 "variable.name",
+    //                 "variable.other",
+    //                 "variable.other.readwrite",
+    //                 "variable.parameter",
+    //                 "variable.parameter.function.language.special.self.python",
+    //                 "variable.parameter.function.language.python",
+    //                 "meta.function.parameters.python",
+    //                 "meta.function.python",
+    //                 "source.python"
+    //         ],
+    //             "settings": {
+    //                 "fontStyle": ""
+    //             }
+    //         },
+    //         {
+    //             "scope": [
+    //                 "source.powershell variable.other.member",
+    //                 "entity.name.operator.custom-literal",
+    //                 "string",
+    //                 "punctuation.definition.group.regexp",
+    //                 "punctuation.definition.group.assertion.regexp",
+    //                 "punctuation.definition.character-class.regexp",
+    //                 "punctuation.character.set.begin.regexp",
+    //                 "punctuation.character.set.end.regexp",
+    //                 "keyword.operator.negation.regexp",
+    //                 "support.other.parenthesis.regexp",
+    //                 "meta.preprocessor.string",
+    //     		    "meta.embedded.assembly"
+    //             ],
+    //             "settings": {
+    //                 "foreground": "#6c2fb6"
+    //             }
+    //         },
+    //         {
+    //             "scope": [
+    //                 "comment"
+    //             ],
+    //             "settings": {
+    //                 "foreground": "#147592"
+    //             }
+    //         },
+    //         {
+    //             "scope": [
+    //                 "support.class",
+    //                 "support.type",
+    //                 "entity.name.type",
+    //                 "entity.name.namespace",
+    //                 "entity.other.attribute",
+    //                 "entity.name.scope-resolution",
+    //                 "entity.name.class",
+    //                 "entity.name.function",
+    //                 "support.function",
+    //                 "support.constant.handlebars",
+    //                 "entity.other.attribute-name"
+    //             ],
+    //             "settings": {
+    //                 "foreground": "#720000"
+    //             }
+    //         }
+    //     ]
+    // },
 
     "terminal.integrated.fontFamily": "Consolas",
     "terminal.integrated.fontSize": 16,
