--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 typings/
 *:Zone.Identifier
 __pycache__
-excel/__pycache__/REG.cpython-310.pyc
+**/__pycache__
+build
+dist
+*.toc
+*.pyz
+*.pyc
+*.pkg
+*.zip
